<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/parkingSpotCoordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="Latitude, Longitude"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/whereAmIButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parkingSpotAddress"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/currentLocationCoordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="38.394284, 27.041846"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentAddressText"
        app:layout_constraintVertical_bias="0.006" />

    <Button
        android:id="@+id/parkHereButton"
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:layout_marginBottom="64dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/park_here"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/parkingSpotAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/whereAmIButton"
        android:layout_width="176dp"
        android:layout_height="47dp"
        android:layout_marginBottom="28dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/where_am_i"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/currentLocationText"
        app:layout_constraintEnd_toStartOf="@+id/getMeToMyCarButton"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/getMeToMyCarButton"
        android:layout_width="177dp"
        android:layout_height="44dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="66dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/get_me_to_car"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/currentAddressText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parkingSpotAddress"
        app:layout_constraintVertical_bias="1.0"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="378dp"
        android:layout_height="51dp"
        android:clickable="false"
        android:fontFamily="@font/bubblegum_sans"
        android:password="false"
        android:phoneNumber="false"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textIsSelectable="false"
        android:textSize="36sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/parkHereButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76" />

    <TextView
        android:id="@+id/currentlyParkedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:text="@string/currently_parked"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentLocationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/current_location"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/currentAddressText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/distanceText"
        android:layout_width="53dp"
        android:layout_height="28dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="0.0"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentLocationCoordinates" />

    <TextView
        android:id="@+id/parkingSpotAddress"
        android:layout_width="374dp"
        android:layout_height="65dp"
        android:layout_marginBottom="432dp"
        android:text="Parking Spot Address"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/currentAddressText"
        android:layout_width="367dp"
        android:layout_height="70dp"
        android:text="Bahçelerarası, Mithatpaşa Cd. No 46, 35330 Balçova/İzmir"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parkingSpotAddress"
        app:layout_constraintVertical_bias="0.502" />

    <ImageButton
        android:id="@+id/tr_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/titleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437"
        app:srcCompat="@drawable/tr" />

    <ImageButton
        android:id="@+id/en_button"
        android:layout_width="57dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toTopOf="@+id/titleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toEndOf="@+id/tr_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388"
        app:srcCompat="@drawable/au" />

    <ImageButton
        android:id="@+id/de_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/titleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toEndOf="@+id/en_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388"
        app:srcCompat="@drawable/de" />

    <ImageButton
        android:id="@+id/ru_button"
        android:layout_width="55dp"
        android:layout_height="41dp"
        app:layout_constraintBottom_toTopOf="@+id/titleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toEndOf="@+id/de_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466"
        app:srcCompat="@drawable/ru" />

    <TextView
        android:id="@+id/distanceToCarText"
        android:layout_width="274dp"
        android:layout_height="32dp"
        android:text="@string/distance_to_car"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/currentLocationCoordinates"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="@+id/currentLocationCoordinates"
        app:layout_constraintTop_toBottomOf="@+id/currentLocationCoordinates"
        app:layout_constraintVertical_bias="0.175" />


</androidx.constraintlayout.widget.ConstraintLayout>
